# substraTEE

./: .gitmodules  README.md
sealedkey/: Makefile  README.md
sealedkey/app/: Cargo.toml
sealedkey/app-cpp/: Enclave_u.c  Enclave_u.h
sealedkey/app/src/: main.rs
sealedkey/enclave/: Cargo.toml  Enclave.edl
sealedkey/enclave/src/: lib.rs
wasm-sgx/: Makefile  README.md  sgx_tstd  third_party
wasm-sgx/app/: Cargo.toml
wasm-sgx/app/src/: main.rs
wasm-sgx/enclave/: Cargo.toml  Makefile  Xargo.toml
wasm-sgx/enclave/src/: lib.rs
wasm-sgx/xargo/sgx_rand/: Cargo.toml
wasm-sgx/xargo/sgx_serialize/: Cargo.toml
wasm-sgx/xargo/sgx_tstd/: Cargo.toml
wasm-sgx/xargo/sgx_tunittest/: Cargo.toml
wasm-test/: Cargo.toml  README.md  runtime.compact.wasm
wasm-test/runtime/: build.sh
wasm-test/src/: main.rs
