[package]
name = "Sealdatasampleenclave"
version = "1.0.0"
authors = ["Baidu"]

[lib]
name = "sealdatasampleenclave"
crate-type = ["staticlib"]

[features]
default = []

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_types = { path = "../../rust-sgx-sdk/sgx_types" }
sgx_tseal = { path = "../../rust-sgx-sdk/sgx_tseal" }
sgx_tstd = { path = "../../rust-sgx-sdk/sgx_tstd" }
sgx_rand = { path = "../../rust-sgx-sdk/sgx_rand" }
sgx_tcrypto = { path = "../../rust-sgx-sdk/sgx_tcrypto" }