[package]
name = "Wasmienclave"
version = "1.0.0"
authors = ["Baidu"]

[lib]
name = "wasmienclave"
crate-type = ["staticlib"]

[features]
default = []

[dependencies]
wasmi = { path = "../../rust-sgx-sdk/third_party/wasmi" }
serde = { path = "../../rust-sgx-sdk/third_party/serde-rs/serde/serde" }
serde_json = { path = "../../rust-sgx-sdk/third_party/serde-rs/json"}
sgxwasm = { path = "sgxwasm" }
lazy_static = { version = "1.1.0", features = ["spin_no_std"] }

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_types = { path = "../../rust-sgx-sdk/sgx_types" }
sgx_tstd = { path = "../../rust-sgx-sdk/sgx_tstd" }
