[package]
name = "Wasmienclave"
version = "1.0.0"
authors = ["Baidu"]

[lib]
name = "wasmienclave"
crate-type = ["staticlib"]

[features]
default = []

[dependencies]
wasmi = { git = "https://github.com/baidu/rust-sgx-sdk" }
serde = { git = "https://github.com/baidu/rust-sgx-sdk" }
serde_json = { git = "https://github.com/baidu/rust-sgx-sdk"}
sgxwasm = { path = "sgxwasm" }
lazy_static = { version = "1.1.0", features = ["spin_no_std"] }

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_types = { git = "https://github.com/baidu/rust-sgx-sdk"}
sgx_tstd = { git = "https://github.com/baidu/rust-sgx-sdk"}
